Network modification infos with activation status by root network (#718)
* Network modification infos with activation status by root network 

---------

Signed-off-by: souissimai <maissa.souissi@rte-france.com> 
Co-authored-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>